first shot at RTFHandler using jfor RTF library
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@195397 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,7 @@ list of possible build targets.
     <include name="lib/batik.jar"/>
     <include name="lib/avalon-framework*.jar"/>
     <include name="lib/jimi*"/>
+    <include name="lib/jfor*.jar"/>
   </fileset>
   
   <fileset dir="${basedir}" id="dist.src">
