--- a/build.xml
+++ b/build.xml
@@ -190,8 +190,8 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <echo message="------------------- ${Name} ${version} [${year}] ----------------"/>
 
     <property name="build.compiler" value="classic"/>
-    <property name="debug" value="off"/>
-    <property name="optimize" value="on"/>
+    <property name="debug" value="on"/>
+    <property name="optimize" value="off"/>
     <property name="deprecation" value="off"/>
 
     <property name="textfontencoding" value="WinAnsiEncoding"/>
