Exclude compliance.xml from validation (This is a quick fix as Forrest is configured to validate all docs and fails if an error occurs. The goal is of course to validate compliance.xml)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@195538 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -25,3 +25,5 @@ project.skinconf=${project.content-dir}/skinconf.xml
 #project.lib-dir=${project.content-dir}/lib
 #project.classes-dir=${project.content-dir}/classes
 
+forrest.validate.xdocs.excludes=compliance.xml
+
