--- a/contrib/mathml/build.xml
+++ b/contrib/mathml/build.xml
@@ -6,6 +6,18 @@
 
 <project default="package" basedir=".">
 
+  <path id="libs-build-classpath">
+    <fileset dir="../../lib">
+      <include name="*.jar"/>
+    </fileset>
+    <fileset dir="../../build">
+      <include name="fop.jar"/>
+    </fileset>
+    <fileset dir="lib">
+      <include name="*.jar"/>
+    </fileset>
+  </path>
+  
   <!-- =================================================================== -->
   <!-- Initialization target                                               -->
   <!-- =================================================================== -->
@@ -20,9 +32,9 @@
     <echo message="------------------- ${Name} ${version} [${year}] ----------------"/>
 
     <property name="build.compiler" value="classic"/>
-    <property name="debug" value="off"/>
-    <property name="optimize" value="on"/>
-    <property name="deprecation" value="off"/>
+    <property name="debug" value="on"/>
+    <property name="optimize" value="off"/>
+    <property name="deprecation" value="on"/>
 
     <property name="src.dir" value="./src"/>
     <property name="lib.dir" value="./lib"/>
@@ -35,36 +47,27 @@
     <property name="resource.dir" value="resources"/>
     <property name="mathml.dir" value="org/apache/fop/mathml"/>
 
-    <property name="xslt" value="org.apache.xalan.xslt.Process"/>
-
+    <available property="jeuclid.present" classname="net.sourceforge.jeuclid.MathBase" classpathref="libs-build-classpath"/>
+  </target>
+  <target name="jeuclid-check" depends="init" unless="jeuclid.present">
+    <echo message="============================================================================="/>
+    <echo message="jeuclid.jar is missing in the lib directory."/>
+    <echo message="You can download it at: http://sourceforge.net/projects/jeuclid/"/>
+    <echo message="============================================================================="/>
+    <fail message="Dependecy check failed."/>
   </target>
 
   <!-- =================================================================== -->
   <!-- Help on usage                                                       -->
   <!-- =================================================================== -->
   <target name="usage">
-    <echo message=""/>
-    <echo message=""/>
-    <echo message="${Name} Build file"/>
-    <echo message="-------------------------------------------------------------"/>
-    <echo message=""/>
-    <echo message=" available targets are:"/>
-    <echo message=""/>
-    <echo message="   package   --> generates the ${name}.jar file (default)"/>
-    <echo message="   compile   --> compiles the source code"/>
-    <echo message="   clean     --> cleans up the directory"/>
-    <echo message="   site      --> generates the ${Name} web site (not yet implemented)"/>
-    <echo message=""/>
-    <echo message=" See the comments inside the build.xml file for more details."/>
-    <echo message="-------------------------------------------------------------"/>
-    <echo message=""/>
-    <echo message=""/>
+    <echo message="Use the -projecthelp option instead"/>
   </target>
 
   <!-- =================================================================== -->
   <!-- Prepares the build directory                                        -->
   <!-- =================================================================== -->
-  <target name="prepare" depends="init">
+  <target name="prepare" depends="init, jeuclid-check">
     <!-- create directories -->
     <echo message="Preparing the build directories"/>
     <mkdir dir="${build.dir}"/>
@@ -89,7 +92,7 @@
   <!-- =================================================================== -->
   <!-- Compiles the source directory                                       -->
   <!-- =================================================================== -->
-  <target name="compile" depends="prepare-src">
+  <target name="compile" depends="prepare-src" description="Compile the Java sources">
     <echo message="Compiling the sources "/>
     <!-- create directories -->
     <mkdir dir="${build.dest}"/>
@@ -99,13 +102,15 @@
            debug="${debug}"
            deprecation="${deprecation}"
            optimize="${optimize}"
-           excludes=""/>
+           excludes="">
+      <classpath refid="libs-build-classpath"/>
+    </javac>
   </target>
 
   <!-- =================================================================== -->
   <!-- Creates the class package                                           -->
   <!-- =================================================================== -->
-  <target name="package" depends="compile">
+  <target name="package" depends="compile" description="Create jar file">
     <echo message="Creating the jar file ${build.dir}/${name}.jar"/>
     <tstamp>
       <format property="ts" pattern="yyyyMMdd-HHmmss-z"/>
@@ -126,7 +131,7 @@
   <!-- =================================================================== -->
   <!-- Clean targets                                                       -->
   <!-- =================================================================== -->
-  <target name="clean" depends="init">
+  <target name="clean" depends="init" description="Cleans the build directory">
     <delete dir="${build.dir}"/>
   </target>
 
