--- a/forrest.properties
+++ b/forrest.properties
@@ -25,5 +25,9 @@ project.skinconf=${project.content-dir}/skinconf.xml
 #project.lib-dir=${project.content-dir}/lib
 #project.classes-dir=${project.content-dir}/classes
 
-forrest.validate.xdocs.excludes=compliance.xml
+forrest.validate=true
+forrest.validate.xdocs=${forrest.validate}
+forrest.validate.skinconf=${forrest.validate}
+
+forrest.validate.failonerror=true
 
